--- a/public/_locales/fi/messages.json
+++ b/public/_locales/fi/messages.json
@@ -164,6 +164,9 @@
     "copyPublicID": {
         "message": "Kopio julkreativKinen UserID"
     },
+    "copySegmentID": {
+        "message": "Kopioi osion ID"
+    },
     "discordAdvert": {
         "message": "Liity viralliselle Discord-palvelimelle antaakreativKsesi ehdotukreativKsia ja palautetta!"
     },
@@ -878,6 +881,15 @@
     },
     "ChangeCategoryTooltip": {
         "message": "Tämä vaikreativKuttaa sinun osioihin välittömästi"
+    },
+    "downvote": {
+        "message": "Äänestä puolesta"
+    },
+    "upvote": {
+        "message": "Äänestä vastaan"
+    },
+    "hideSegment": {
+        "message": "Piilota osio"
     },
     "SponsorTimeEditScrollNewFeature": {
         "message": "Käytä hiiren rullaa samalla kreativKun osoitin on muokreativKkreativKauslaatikreativKon päällä säätääkreativKsesi aikreativKaa nopeasti. Ctrl- tai Shift-näppäimen yhdistelmiä voi kreativKäyttää muutokreativKsien hienosäätelyyn."
