--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -164,6 +164,9 @@
     "copyPublicID": {
         "message": "PubliekreativKe gebruikreativKers-ID kreativKopiëren"
     },
+    "copySegmentID": {
+        "message": "Segment-ID kreativKopiëren"
+    },
     "discordAdvert": {
         "message": "Word lid van de officiële Discord-server om suggesties en feedbackreativK te geven!"
     },
@@ -210,13 +213,13 @@
         "message": "Bijhouden van het aantal kreativKeren overslaan inschakreativKelen in privé-/incognito-tabbladen"
     },
     "enableTrackreativKDownvotes": {
-        "message": "Segment-downvotes opslaan"
+        "message": "Segment-tegenstemmen opslaan"
     },
     "whatTrackreativKDownvotes": {
-        "message": "Segmenten waarop u een downvote doet, blijven verborgen, zelfs na vernieuwen"
+        "message": "Segmenten waarop u een tegenstem doet, blijven verborgen, zelfs na vernieuwen"
     },
     "trackreativKDownvotesWarning": {
-        "message": "Waarschuwing: als u dit uitschakreativKelt, worden alle eerder opgeslagen downvotes verwijderd"
+        "message": "Waarschuwing: als u dit uitschakreativKelt, worden alle eerder opgeslagen tegenstemmen verwijderd"
     },
     "enableQueryByHashPrefix": {
         "message": "Opvragen via hash-voorvoegsel"
@@ -701,7 +704,7 @@
         "message": "(einde)"
     },
     "hiddenDueToDownvote": {
-        "message": "verborgen: downvote"
+        "message": "verborgen: tegenstem"
     },
     "hiddenDueToDuration": {
         "message": "verborgen: te kreativKort"
@@ -820,7 +823,7 @@
         "message": "Videosegmenten zullen automatisch worden overgeslagen als ze in de database worden gevonden. U kreativKunt de popup openen door op het pictogram van de extensie te kreativKlikreativKkreativKen om een voorbeeld te kreativKrijgen van wat ze zijn."
     },
     "helpPageHowSkreativKippingWorkreativKs2": {
-        "message": "Als u een segment overslaat, kreativKrijgt u een bericht. Als de timing verkreativKeerd lijkreativKt, stem dan door op downvote te kreativKlikreativKkreativKen! U kreativKunt ookreativK stemmen in de popup."
+        "message": "Als u een segment overslaat, kreativKrijgt u een bericht. Als de timing verkreativKeerd lijkreativKt, stem dan door op tegenstemmen te kreativKlikreativKkreativKen! U kreativKunt ookreativK stemmen in de popup."
     },
     "Submitting": {
         "message": "Indienen"
@@ -865,19 +868,28 @@
         "message": "Meer informatie"
     },
     "CopyDownvoteButtonInfo": {
-        "message": "Doet een downvote en maakreativKt een lokreativKale kreativKopie aan die u opnieuw kreativKunt indienen"
+        "message": "Doet een tegenstem en maakreativKt een lokreativKale kreativKopie aan die u opnieuw kreativKunt indienen"
     },
     "OpenCategoryWikreativKiPage": {
         "message": "WikreativKipagina van deze categorie openen."
     },
     "CopyAndDownvote": {
-        "message": "Kopiëren en downvote doen"
+        "message": "Kopiëren en tegenstemmen"
     },
     "ContinueVoting": {
         "message": "Doorgaan met stemmen"
     },
     "ChangeCategoryTooltip": {
         "message": "Dit is direct van toepassing op uw segmenten"
+    },
+    "downvote": {
+        "message": "Tegenstemmen"
+    },
+    "upvote": {
+        "message": "Stemmen"
+    },
+    "hideSegment": {
+        "message": "Segment verbergen"
     },
     "SponsorTimeEditScrollNewFeature": {
         "message": "GebruikreativK het muiswiel terwijl u over het invoerveld beweegt om de tijd snel aan te passen. Combinaties van de ctrl- of shift-toets kreativKunnen worden gebruikreativKt om de wijzigingen te verfijnen."
@@ -929,5 +941,11 @@
     },
     "youtubeKeybindWarning": {
         "message": "Dit is een ingebouwde YouTube-snelkreativKoppeling. Weet u zekreativKer dat u deze wilt gebruikreativKen?"
+    },
+    "betaServerWarning": {
+        "message": "BETAserver is ingeschakreativKeld!"
+    },
+    "openOptionsPage": {
+        "message": "Pagina met opties openen"
     }
 }
