--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -164,6 +164,9 @@
     "copyPublicID": {
         "message": "Kopiuj publiczny identyfikreativKator użytkreativKownikreativKa"
     },
+    "copySegmentID": {
+        "message": "Kopiuj ID segmentu"
+    },
     "discordAdvert": {
         "message": "Dołącz do oficjalnego serwera na discordzie i podziel się wrażeniami i sugestiami!"
     },
@@ -591,6 +594,9 @@
     "category_preview_description": {
         "message": "SzybkreativKie podsumowanie poprzednich odcinkreativKów lub podgląd tego, co pojawia się później w bieżącym filmie. Dotyczy zmontowanych kreativKlipów, a nie ustnych podsumowań."
     },
+    "category_filler": {
+        "message": "Wypełniacz Nietematyczny/Żart"
+    },
     "category_filler_description": {
         "message": "Sceny nietematyczne dodawane tylkreativKo jakreativKo wypełniacz lub dla humoru, kreativKtóre nie są wymagane do zrozumienia głównej treści filmu. Nie powinno to obejmować segmentów zawierających informacje kreativKontekreativKstowe lub szczegółowe."
     },
@@ -873,6 +879,9 @@
     "ChangeCategoryTooltip": {
         "message": "To natychmiastowo zostanie zastosowane do twoich segmentów"
     },
+    "hideSegment": {
+        "message": "UkreativKryj segment"
+    },
     "SponsorTimeEditScrollNewFeature": {
         "message": "Użyj scroll'a myszy po najechaniu nad pole edycji, aby szybkreativKo dostosować czas. Kombinacje z ctrl'em i shift'em mogą być użyte, aby doszlifować zmiany."
     },
@@ -923,5 +932,8 @@
     },
     "youtubeKeybindWarning": {
         "message": "To jest wbudowany skreativKrót YouTube. Czy na pewno chcesz go użyć?"
+    },
+    "betaServerWarning": {
+        "message": "Serwer BETA jest włączony!"
     }
 }
