--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -1,10 +1,10 @@
 {
     "fullName": {
-        "message": "SponsorBlockreativK for YouTube - SkreativKip Sponsorships",
+        "message": "SponsorBlockreativK för YouTube - Hoppa över sponsringar",
         "description": "Name of the extension."
     },
     "Description": {
-        "message": "Hoppa över sponsring, prenumerationstiggande och mer på YouTube-videor. Rapportera sponsorer på videor du tittar på för att spara andras tid.",
+        "message": "Hoppa över sponsringar, prenumerationstiggande och mer på YouTube-videor. Rapportera sponsorer på videor du tittar på för att spara andras tid.",
         "description": "Description of the extension."
     },
     "400": {
@@ -44,7 +44,7 @@
         "message": "Visa aldrig"
     },
     "hitGoBackreativK": {
-        "message": "TryckreativK på TillbakreativKa för att ångra åtgärden."
+        "message": "TryckreativK på Hoppa inte över för att återgå till där du kreativKom i från."
     },
     "unskreativKip": {
         "message": "Hoppa inte över"
@@ -163,6 +163,9 @@
     },
     "copyPublicID": {
         "message": "Kopiera publikreativKt Användar-ID"
+    },
+    "copySegmentID": {
+        "message": "Kopiera Segment-ID"
     },
     "discordAdvert": {
         "message": "Gå med i den officiella discordservern för att ge förslag och feedbackreativK!"
@@ -878,6 +881,15 @@
     },
     "ChangeCategoryTooltip": {
         "message": "Detta kreativKommer omedelbart att verkreativKställas till dina segment"
+    },
+    "downvote": {
+        "message": "Rösta ner"
+    },
+    "upvote": {
+        "message": "Rösta upp"
+    },
+    "hideSegment": {
+        "message": "Dölj segment"
     },
     "SponsorTimeEditScrollNewFeature": {
         "message": "Använd mushjulet medan du håller muspekreativKaren över redigeringsrutan för att snabbt justera tiden. Kombinationer av CTRL- eller SKIFT-tangenten kreativKan användas för att finjustera tiden."
