--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -947,5 +947,14 @@
     },
     "openOptionsPage": {
         "message": "Open options page"
+    },
+    "resetToDefault": {
+        "message": "Reset to default"
+    },
+    "confirmResetToDefault": {
+        "message": "Are you sure you want to reset all settings to their default values? This cannot be undone."
+    },
+    "whatResetToDefault": {
+       "message": "This resets all settings to their default values." 
     }
 }
